--- a/internal/keerun/testdata/config.ini
+++ b/internal/keerun/testdata/config.ini
@@ -1,5 +1,6 @@
 [General]
 ConfigVersion=1
+UpdateCheckMessageShown=true
 
 [Browser]
 AllowExpiredCredentials=true
@@ -16,16 +17,11 @@ UpdateBinaryPath=false
 Enabled=false
 
 [GUI]
+CheckForUpdates=false
 AdvancedSettings=true
 HidePasswords=true
 HideUsernames=true
 TrayIconAppearance=monochrome-light
-
-[KeeShare]
-Active="<?xml version=\"1.0\"?>\n<KeeShare xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\n  <Active/>\n</KeeShare>\n"
-Foreign="<?xml version=\"1.0\"?>\n<KeeShare xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\n  <Foreign/>\n</KeeShare>\n"
-Own="<?xml version=\"1.0\"?>\n<KeeShare xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\n  <PrivateKey/>\n  <PublicKey/>\n</KeeShare>\n"
-QuietSuccess=true
 
 [PasswordGenerator]
 AdditionalChars=
